Added id, header n footer. added photo. addel link rel for style.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TUGAS 3 KAKAS</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hello
+    <header class="site-header">
+
+    </header>
+    <div id="profile-container">
+        <img src="fotowaddaaa.jpg" alt="FOTOKU" id="profile-image">
+        <h2 id="profile-name">MAWADDAH NASIFAH</h2>
+        <p id="profile-name">6090121061</p>
+    </div>
+    <footer class="site-footer">
+        <p>Copyright &copy; 2023</p>
+      </footer>
 </body>
 </html>
